; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/atm/extr_lec.c_lec_arp_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/atm/extr_lec.c_lec_arp_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lec_priv = type { i32, i32, i32, i32, i32, i32* }

@LEC_ARP_TABLE_SIZE = common dso_local global i16 0, align 2
@lec_arp_check_expire = common dso_local global i32 0, align 4
@LEC_ARP_REFRESH_INTERVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lec_priv*)* @lec_arp_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lec_arp_init(%struct.lec_priv* %0) #0 {
  %2 = alloca %struct.lec_priv*, align 8
  %3 = alloca i16, align 2
  store %struct.lec_priv* %0, %struct.lec_priv** %2, align 8
  store i16 0, i16* %3, align 2
  br label %4

4:                                                ; preds = %18, %1
  %5 = load i16, i16* %3, align 2
  %6 = zext i16 %5 to i32
  %7 = load i16, i16* @LEC_ARP_TABLE_SIZE, align 2
  %8 = zext i16 %7 to i32
  %9 = icmp slt i32 %6, %8
  br i1 %9, label %10, label %21

10:                                               ; preds = %4
  %11 = load %struct.lec_priv*, %struct.lec_priv** %2, align 8
  %12 = getelementptr inbounds %struct.lec_priv, %struct.lec_priv* %11, i32 0, i32 5
  %13 = load i32*, i32** %12, align 8
  %14 = load i16, i16* %3, align 2
  %15 = zext i16 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = call i32 @INIT_HLIST_HEAD(i32* %16)
  br label %18

18:                                               ; preds = %10
  %19 = load i16, i16* %3, align 2
  %20 = add i16 %19, 1
  store i16 %20, i16* %3, align 2
  br label %4

21:                                               ; preds = %4
  %22 = load %struct.lec_priv*, %struct.lec_priv** %2, align 8
  %23 = getelementptr inbounds %struct.lec_priv, %struct.lec_priv* %22, i32 0, i32 4
  %24 = call i32 @INIT_HLIST_HEAD(i32* %23)
  %25 = load %struct.lec_priv*, %struct.lec_priv** %2, align 8
  %26 = getelementptr inbounds %struct.lec_priv, %struct.lec_priv* %25, i32 0, i32 3
  %27 = call i32 @INIT_HLIST_HEAD(i32* %26)
  %28 = load %struct.lec_priv*, %struct.lec_priv** %2, align 8
  %29 = getelementptr inbounds %struct.lec_priv, %struct.lec_priv* %28, i32 0, i32 2
  %30 = call i32 @INIT_HLIST_HEAD(i32* %29)
  %31 = load %struct.lec_priv*, %struct.lec_priv** %2, align 8
  %32 = getelementptr inbounds %struct.lec_priv, %struct.lec_priv* %31, i32 0, i32 1
  %33 = call i32 @spin_lock_init(i32* %32)
  %34 = load %struct.lec_priv*, %struct.lec_priv** %2, align 8
  %35 = getelementptr inbounds %struct.lec_priv, %struct.lec_priv* %34, i32 0, i32 0
  %36 = load i32, i32* @lec_arp_check_expire, align 4
  %37 = call i32 @INIT_DELAYED_WORK(i32* %35, i32 %36)
  %38 = load %struct.lec_priv*, %struct.lec_priv** %2, align 8
  %39 = getelementptr inbounds %struct.lec_priv, %struct.lec_priv* %38, i32 0, i32 0
  %40 = load i32, i32* @LEC_ARP_REFRESH_INTERVAL, align 4
  %41 = call i32 @schedule_delayed_work(i32* %39, i32 %40)
  ret void
}

declare dso_local i32 @INIT_HLIST_HEAD(i32*) #1

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @INIT_DELAYED_WORK(i32*, i32) #1

declare dso_local i32 @schedule_delayed_work(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
